Fix title text align

--- a/src/css/pages/try-now.css
+++ b/src/css/pages/try-now.css
@@ -1,3 +1,9 @@
+.category__try-now {
+  h1 {
+    text-align: center;
+  }
+}
+
 a.btn.btn-try-now {
   transform: translateY(-25%);
   padding: .5em 2em;
